--- a/Bank0.1/Bank0.1.vcxproj.filters
+++ b/Bank0.1/Bank0.1.vcxproj.filters
@@ -18,10 +18,24 @@
     <ClCompile Include="RegistrationForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CDashBoard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RegistrationForm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CDashBoard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="RegistrationForm.resx">
+      <Filter>Resource Files</Filter>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
