--- a/Bank0.1/Bank0.1.vcxproj.filters
+++ b/Bank0.1/Bank0.1.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Account.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ADashBoard.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RegistrationForm.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Account.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ADashBoard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
